# BehaviorTree.PY

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_CHECKLIST.md  README.md  SECURITY.md  SPLIT_FROM_CPP.md  dev_notes.md  package.xml  pyproject.toml
.github/workflows/: ci.yml
behaviortree_py/: __init__.py  _version.py  nodes.py
docs/: api-overview.md  data-contract.md  parity-limitations.md
examples/: PROJECT_CHECKLIST.md  README.md  btcpp_remaining_suite.py  stage1_minimal_tick.py  stage2_condition_node.py  stage2_control_decorator_nodes.py  stage2_stateful_action.py  stage2_sync_action.py  stage3_scripting_tutorial_parity.py  stage3_typed_ports.py  stage3_value_contract.py  stage4_create_from_file.py  stage4_plugin_loading.py  stage4_register_multiple_trees.py  stage4_substitution_rules.py  stage4_subtree_model.py  stage4_subtree_port_remapping.py  stage5_global_blackboard_backup.py  stage5_introspection.py  stage5_json_roundtrip.py  stage5_observer_monitor.py  stage6_loggers.py
examples/trees/: always_success.xml
scripts/: pip_install_smoke.sh  run_tests.sh
src/core/: bindings.cpp
tests/: test_btcpp_examples_parity.py  test_btcpp_examples_remaining_parity.py  test_stage1_smoke.py  test_stage2_decorator_control_nodes.py  test_stage2_python_nodes.py  test_stage3_inout_ports.py  test_stage3_ports_and_blackboard.py  test_stage3_typed_ports.py  test_stage4_create_from_file.py  test_stage4_plugin_loading.py  test_stage4_registered_trees.py  test_stage4_substitution_rules.py  test_stage5_introspection.py  test_stage5_json_export_import.py  test_stage6_loggers.py  test_stage7_stress.py  test_threading_and_errors.py
