<?xml version="1.0"?>
<package format="3">
  <name>behaviortree_py</name>
  <version>4.8.3</version>
  <description>Python bindings for BehaviorTree.CPP</description>

  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>pybind11-dev</depend>
  <depend>python3-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

