[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.11",
  "cmake>=3.16",
  "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "behaviortree_py"
version = "4.7.1"
description = "Python bindings for BehaviorTree.CPP"
readme = "README.md"
requires-python = ">=3.10"

[tool.scikit-build]
cmake.minimum-version = "3.16"
build.verbose = true
wheel.packages = ["behaviortree_py"]
